index.html: website title updated

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
-        <title>Car Depreciation Calculator</title>
+        <title>spot-on | The car ownership cost calculator</title>
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <meta name="description" content="A web app that calculates the acctual cost of ownership a car"/>
